--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^19.1.1",
